--- a/Infrastructure/Data/SeedData/Appointments.json
+++ b/Infrastructure/Data/SeedData/Appointments.json
@@ -1,56 +1,56 @@
 [
     {
         "Date": "2020-12-08T00:00:00",
-        "EstimatedStartTime": "2020-10-10T09:00:00",
-        "EstimatedEndTime": "2020-10-10T09:30:00",
+        "EstimatedStartTime": "2020-12-08T09:00:00",
+        "EstimatedEndTime": "2020-12-08T09:30:00",
         "Description": "Descricao 1",
         "Price": 80,
-        "AppUserDisplayName": "Cliente 1",
+        "AppUserName": "Cliente 1",
         "AppUserEmail": "cliente1@gmail.com"
     },
     {
         "Date": "2020-12-08T00:00:00",
-        "EstimatedStartTime": "2020-10-10T09:30:00",
-        "EstimatedEndTime": "2020-10-10T10:00:00",
+        "EstimatedStartTime": "2020-12-08T09:30:00",
+        "EstimatedEndTime": "2020-12-08T10:00:00",
         "Description": "Descricao 2",
         "Price": 80,
-        "AppUserDisplayName": "Cliente 2",
+        "AppUserName": "Cliente 2",
         "AppUserEmail": "cliente2@gmail.com"
     },
     {
         "Date": "2020-12-08T00:00:00",
-        "EstimatedStartTime": "2020-10-11T15:00:00",
-        "EstimatedEndTime": "2020-10-11T17:00:00",
+        "EstimatedStartTime": "2020-12-08T15:00:00",
+        "EstimatedEndTime": "2020-12-08T17:00:00",
         "Description": "Descricao 3",
         "Price": 150,
-        "AppUserDisplayName": "Cliente 3",
+        "AppUserName": "Cliente 3",
         "AppUserEmail": "cliente3@gmail.com"
     },
     {
         "Date": "2020-12-09T00:00:00",
-        "EstimatedStartTime": "2020-10-11T15:00:00",
-        "EstimatedEndTime": "2020-10-11T17:00:00",
+        "EstimatedStartTime": "2020-12-09T15:00:00",
+        "EstimatedEndTime": "2020-12-09T17:00:00",
         "Description": "Descricao 4",
         "Price": 120,
-        "AppUserDisplayName": "Cliente 2",
+        "AppUserName": "Cliente 2",
         "AppUserEmail": "cliente2@gmail.com"
     },
     {
         "Date": "2020-12-09T00:00:00",
-        "EstimatedStartTime": "2020-10-12T12:00:00",
-        "EstimatedEndTime": "2020-10-12T15:00:00",
+        "EstimatedStartTime": "2020-12-09T12:00:00",
+        "EstimatedEndTime": "2020-12-09T15:00:00",
         "Description": "Descricao 5",
         "Price": 180,
-        "AppUserDisplayName": "Cliente 1",
+        "AppUserName": "Cliente 1",
         "AppUserEmail": "cliente1@gmail.com"
     },
     {
         "Date": "2020-12-09T00:00:00",
-        "EstimatedStartTime": "2020-10-12T14:30:00",
-        "EstimatedEndTime": "2020-10-12T15:30:00",
+        "EstimatedStartTime": "2020-12-09T14:30:00",
+        "EstimatedEndTime": "2020-12-09T15:30:00",
         "Description": "Descricao 6",
         "Price": 100,
-        "AppUserDisplayName": "Cliente 3",
+        "AppUserName": "Cliente 3",
         "AppUserEmail": "cliente3@gmail.com"
     }
 ]
